Feito as rotinas Inserir,Apagar,Alterar e feita as conexões com o Banco

--- a/Finanças/Repository/Repository.csproj
+++ b/Finanças/Repository/Repository.csproj
@@ -41,13 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cliente.cs" />
-    <Compile Include="ContaPagar.cs" />
-    <Compile Include="ContaReceber.cs" />
+    <Compile Include="ClientesRepositorio.cs" />
+    <Compile Include="ContasPagarRepositorio.cs" />
+    <Compile Include="ContaReceberRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Estrutura.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{b353ecee-f3cf-40eb-bfb8-2812b91f396f}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
