--- a/Finanças/Principal/View.csproj
+++ b/Finanças/Principal/View.csproj
@@ -72,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Clientes.resx">
+      <DependentUpon>Clientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ContasReceber.resx">
       <DependentUpon>ContasReceber.cs</DependentUpon>
     </EmbeddedResource>
